5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1758_2390.log
== SUBMITION (2019-05-25 19:30:27) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v2[i]/v2[i]
	if(r>r1):
		r1=r
		mes=i+1
	i=i+1
print(mes)
	
-- EXECUTION TIME:
1.27316
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:30:33) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v2[i]/v2[i]
	if(r>r1):
		r1=r
		mes=i+1
	i=i+1
print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 19:32:17) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v2[i]/v2[i]
	if(r<r1):
		r1=r
		mes=i+1
	i=i+1
print(mes)
	
-- EXECUTION TIME:
0.988599
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 12, in <module>
    print(mes)
NameError: name 'mes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 19:32:23) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v2[i]/v2[i]
	if(r<r1):
		r1=r
		mes=i+1
	i=i+1
print(mes)
	
-- EXECUTION TIME:
0.977569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 12, in <module>
    print(mes)
NameError: name 'mes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:32:28) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v2[i]/v2[i]
	if(r<r1):
		r1=r
		mes=i+1
	i=i+1
print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 19:34:48) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v1[i]/v2[i]
	if(r>r1):
		r1=r
		mes=i+1
	i=i+1
print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 19:35:37) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v1[i]/v2[i]
	if(r>r1):
		r1=r
		mes=i+1
	i=i+1
print(mes)
	
-- EXECUTION TIME:
1.19737
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 19:36:01) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v2[i]/v2[i]
	if(r>r1):
		r1=r
		mes=i+1
print(mes)
	
-- EXECUTION TIME:
367.692
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 19:36:35) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v1[i]/v2[i]
	if(r>r1):
		r1=r
		mes=i+1
	i=i+1
print(mes)
	
-- EXECUTION TIME:
0.508933
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:06:39) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
r1=0
while(i<size(v1)):
	r=v1[i]/v2[i]
	if(r>r1):
		r1=r
		mes=i+1
	i=i+1
print(mes)
	
-- EXECUTION TIME:
0.466579
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
